--- a/server/index.html
+++ b/server/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Node.js 웹 서버</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>내 소개 페이지</title>
+    <style>
+       *{
+       }
+    </style>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h2>ㅈㅓ는 이채은 입니다 '.'</h2>
+    <img id="hi" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmTHrccnDoDufIknjXrm3q86qNtRLzamLyIQ&usqp=CAU" width="500" height="500">
+    <h3>저의 mbti는 ESTJ이구여.. 사실은 P입니다....</h3>
+    <img id="mbti" src="https://d2u3dcdbebyaiu.cloudfront.net/uploads/atch_img/65/2d11a924cec515d48c88b52e83e9c651_crop.jpeg">
+    <h3>저의 생일은 9월 9일 이구 혈액형은 b형 이지요 :)</h3>
+
 </body>
 </html>
