--- a/media/login2.html
+++ b/media/login2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>로그인</h2>
-    <form method="get" action="/process/login">
+    <form method="post" action="/process/login">
         <table border="0">
             <tr>
                 <td>아이디</td>
